2010-09-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/bibtex.el:
	* proced.el: Update to new email for Roland Winkler <winkler@gnu.org>.

2010-09-02  Glenn Morris  <rgm@gnu.org>

	* desktop.el (desktop-path): Bump :version after 2009-09-15 change.

2010-08-31  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (standard-display-european-internal):
	Setup standard-display-table for 8-bit characters by storing 8-bit
	characters in the element vector.

	* disp-table.el (standard-display-8bit):
	Setup standard-display-table for 8-bit characters by storing 8-bit
	characters in the element vector.
	(standard-display-european): Likewise.

2010-08-26  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.19.

	* net/tramp-cmds.el (tramp-cleanup-all-connections)
	(tramp-reporter-dump-variable, tramp-load-report-modules)
	(tramp-append-tramp-buffers): Use `tramp-compat-funcall'.
	(tramp-bug): Recommend setting of `tramp-verbose' to 9.

	* net/tramp-compat.el (top): Do not autoload
	`tramp-handle-file-remote-p'.  Load tramp-util.el and tramp-vc.el
	only when `start-file-process' is not bound.
	(byte-compile-not-obsolete-vars): Define if not bound.
	(tramp-compat-funcall): New defmacro.
	(tramp-compat-line-beginning-position)
	(tramp-compat-line-end-position)
	(tramp-compat-temporary-file-directory)
	(tramp-compat-make-temp-file, tramp-compat-file-attributes)
	(tramp-compat-copy-file, tramp-compat-copy-directory)
	(tramp-compat-delete-file, tramp-compat-delete-directory)
	(tramp-compat-number-sequence, tramp-compat-process-running-p):
	Use it.
	(tramp-advice-file-expand-wildcards): Do not use
	`tramp-handle-file-remote-p'.
	(tramp-compat-make-temp-file): Simplify fallback implementation.
	(tramp-compat-copy-file): Add PRESERVE-SELINUX-CONTEXT.
	(tramp-compat-copy-tree): Remove function.
	(tramp-compat-delete-file): New defun.
	(tramp-compat-delete-directory): Provide implementation for older
	Emacsen.